# cyber-bot

./: .env  .gitignore  Dockerfile  README.md  env.example  pyproject.toml  run_docker.sh  system-config.sh
data/: cyberskyline_mindmap.txt
src/: config.py  crawler.py  main.py  navigator.py  openrouter_api.py  utils.py
src/common/: config.py  file_handler.py  openrouter_api.py  trello_helper.py  utils.py
src/controllers/: crew_controller.py  graph_controller.py  main.py
src/integrations/CrewAI-LangGraph/: README.md
src/models/: agent_interface.py  crawler_interface.py  file_interface.py
src/viewers/: crawler.py
src/viewers/crews/: init.sh  module_crew.py  research_crew.py
src/viewers/crews/binary_exploit_crew/: README.md  __init__.py  crew.py
src/viewers/crews/binary_exploit_crew/config/: agents.yaml  tasks.yaml
src/viewers/crews/crypto_crew/: README.md  __init__.py  crew.py
src/viewers/crews/crypto_crew/config/: agents.yaml  tasks.yaml
src/viewers/crews/forensics_crew/: README.md  __init__.py  crew.py
src/viewers/crews/forensics_crew/config/: agents.yaml  tasks.yaml
src/viewers/crews/log_analysis_crew/: README.md  __init__.py  crew.py
src/viewers/crews/log_analysis_crew/config/: agents.yaml  tasks.yaml
src/viewers/crews/markdown_validator_crew/: crew.py
src/viewers/crews/osint_crew/: README.md  crew.py
src/viewers/crews/osint_crew/config/: agents.yaml  tasks.yaml
src/viewers/crews/password_cracking_crew/: README.md  crew.py
src/viewers/crews/password_cracking_crew/config/: agents.yaml  tasks.yaml
src/viewers/crews/prep-for-a-meeting/: agents.py
src/viewers/crews/recon_crew/: README.md  crew.py
src/viewers/crews/recon_crew/config/: agents.yaml  tasks.yaml
src/viewers/crews/samples/game_builder_crew/: crew_runner.py
src/viewers/crews/samples/markdown_validator_crew/: crew.py  crew_runner.py
src/viewers/crews/samples/meeting_assistant_crew/: meeting_assistant_crew.py
src/viewers/crews/samples/prep-for-a-meeting/: agents.py
src/viewers/crews/samples/trip_planner/: trip_agents.py
src/viewers/crews/tools/: init.sh
src/viewers/crews/tools/binary_exploit/: __init__.py  binwalk_tool.py  dnspy_tool.py  file_tool.py  gdb_tool.py  ghidra_tool.py  ida_pro_tool.py  ilspy_tool.py  strings_tool.py
src/viewers/crews/tools/crypto/: __init__.py  crypto_lib_tool.py  cyberchef_tool.py  frequency_analysis_tool.py  online_solver_tool.py  openssl_tool.py
src/viewers/crews/tools/forensics/: __init__.py  autopsy_tool.py  exif_tool_wrapper.py  foremost_tool.py  ftk_imager_tool.py  steghide_tool.py  volatility_tool.py
src/viewers/crews/tools/general/: CharacterCounterTool.py  navigator_tool.py  searxng_tool.py  terminal_tool.py
src/viewers/crews/tools/gui/: computer_control_tool.py
src/viewers/crews/tools/log_analysis/: __init__.py  awk_tool.py  cut_tool.py  grep_tool.py  regex_tool.py  sed_tool.py
src/viewers/crews/tools/osint/: github_search_tool.py  public_records_tool.py  social_media_search_tool.py  web_search_tool.py
src/viewers/crews/tools/password_cracking/: hash_identifier_tool.py  hashcat_tool.py  john_tool.py
src/viewers/crews/tools/recon/: dirb_tool.py  gobuster_tool.py  nikto_tool.py  nmap_tool.py  nuclei_tool.py
src/viewers/crews/tools/traffic_analysis/: tshark_tool.py  wireshark_filter_tool.py
src/viewers/crews/tools/web_exploit/: burp_suite_tool.py  command_injection_payload_tool.py  curl_tool.py  lfi_payload_tool.py  metasploit_tool.py  sqlmap_tool.py  xss_payload_tool.py
src/viewers/crews/traffic_analysis_crew/: README.md  crew.py
src/viewers/crews/traffic_analysis_crew/config/: agents.yaml  tasks.yaml
src/viewers/crews/trip_planner/: trip_agents.py
src/viewers/crews/web_exploit_crew/: README.md  crew.py
src/viewers/crews/web_exploit_crew/config/: agents.yaml  tasks.yaml
src/views/: crawler.py  module_team.py  navigator.py  research_crew.py
